--- a/_includes/header.html
+++ b/_includes/header.html
@@ -62,6 +62,10 @@
               </li>
               {%- endif %}
 
+
+              <!-- CV google doc link --> 
+              <li class="nav-item"><a class="nav-link" href="https://docs.google.com/document/d/1uNc8WX5VukimLHHMq3ypDRpNNA7Pe1ZhgoS9AZ4Dvss/edit?usp=sharing">cv</a></li> 
+
               <!-- Other pages -->
               {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
               {%- for p in sorted_pages -%}
