--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -184,6 +184,9 @@
           {%- if entry.website %}
             <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
           {%- endif %}
+          {%- if entry.huggingface %}
+            <a href="{{ entry.huggingface }}" class="btn btn-sm z-depth-0" role="button">Hugging Face 🤗</a>
+          {%- endif %}
           </div>
           {% if site.badges %}
           <div class="badges">
