dark theme color, room location update

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,7 +20,7 @@ $green-color-bright:  #11D68B !default;
 $purple-color:        #B509AC !default;
 $light-purple-color:  lighten($purple-color, 25%);
 $pink-color:          #f92080 !default;
-$pink-color-desat:    #c64c83 !default;
+$pink-color-desat:    #ff65aa !default;
 $pink-color-light:    #ffdddd !default;
 $yellow-color:        #efcc00 !default;
 
