--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -188,6 +188,9 @@
           {%- if entry.huggingface %}
             <a href="{{ entry.huggingface }}" class="btn btn-sm z-depth-0" role="button">Hugging Face 🤗</a>
           {%- endif %}
+          {%- if entry.video %}
+            <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">video</a>
+          {%- endif %}
           </div>
           {% if site.badges %}
           <div class="badges">
